# octopus

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  chat_conversations.db  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  todo
alembic/: env.py
alembic/versions/: 99b3ff7741d5_initial_schema_baseline.py
app/: main.py
app/api/v1/: router.py
app/core/: bootstrap.py  config.py  security.py
app/db/: database.py  migrations.py  migrations.py.old  models.py
app/features/api_keys/: __init__.py  router.py  schemas.py  service.py
app/features/conversations/: __init__.py  router.py  schemas.py  service.py
app/features/items/: __init__.py  router.py
app/features/users/: router.py  schemas.py  service.py
data/: chat_conversations.db  chat_conversations.db.backup
docs/: API_KEY_MANAGEMENT.md  API_KEY_SECURITY.md  BEST_PRACTICES.md  DATABASE_MIGRATIONS.md  DOCKER_DEPLOYMENT.md  DOCUMENTATION_INDEX.md  ENVIRONMENT_CONFIG.md  FEATURE_IMPLEMENTATION_GUIDE.md  PROJECT_STRUCTURE.md  README.md  SECURITY_IMPLEMENTATION.md
examples/: README.md  demo.py
octopus/: __init__.py  cli.py  utils.py
octopus/commands/: __init__.py  add.py  init.py  remove.py  structure.py
octopus/generators/: __init__.py  feature.py  shared.py  unit.py
octopus/templates/: templates.py
scripts/: README.md  bootstrap.ps1  manage-api-keys.ps1  test-api.ps1  test-conversations.ps1
tests/: README.md  conftest.py
tests/api/v1/: test_endpoints.py
tests/db/: test_models.py
tests/features/: __init__.py
tests/features/users/: __init__.py  (+1 more)
(+6 files in other folders)
