[project]
name = "octopus"
version = "0.1.0"
description = "A FastAPI-oriented architecture generator for building modular, layered applications"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.0",
    "pydantic>=2.12.4",
    "typer>=0.20.0",
]

[project.scripts]
octopus = "octopus.cli:app"

[tool.uv.workspace]
members = [
    "test_app",
    "testing",
    "hello/wold",
]
